# exa-benchmarks

./: .env.example  README.md
shared/shared/agents/: simple_rag.py
shared/shared/graders/: contents.py  rag.py
shared/shared/searchers/: __init__.py  exa.py  parallel.py  supercarl.py
simple-company-benchmark/src/: benchmark.py
simple-company-benchmark/src/searchers/: __init__.py
simple-people-benchmark/: README.md  pyproject.toml
simple-people-benchmark/src/: __init__.py  benchmark.py
simple-people-benchmark/src/searchers/: __init__.py
webcode-benchmark/: .gitignore  README.md  pyproject.toml
webcode-benchmark/data/contents/: code_contents.jsonl
webcode-benchmark/evals/: contents.py  rag.py
